--- a/packages/theme/src/alert.scss
+++ b/packages/theme/src/alert.scss
@@ -1,11 +1,8 @@
 @import "./mixins/mixins.scss";
 @import "./common/var.scss";
 
-@import "./mixins/mixins.scss";
-@import "./common/var.scss";
-
 @include b(alert) {
-  width: 100%;
+  // width: 100%;
   padding: $--alert-padding;
   margin: 0;
   box-sizing: border-box;
